[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Effects/Explode.gd" type="Script" id=2]
[ext_resource path="res://Assets/Other/light_use.png" type="Texture" id=3]
[ext_resource path="res://Assets/Other/Line_Ring.png" type="Texture" id=4]
[ext_resource path="res://Other/Explode_1_Radius.tres" type="Shape2D" id=5]
[ext_resource path="res://Audio/underwaterExplosion.mp3" type="AudioStream" id=6]

[sub_resource type="Curve" id=5]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=1]
curve = SubResource( 5 )

[sub_resource type="Curve" id=2]
max_value = 3.0
_data = [ Vector2( 0, 0 ), 0.0, 47.4835, 0, 0, Vector2( 0.101124, 0.981818 ), -2.12919, -2.12919, 0, 0, Vector2( 1, 0 ), -3.74205, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, -35, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 1 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -45.0
linear_accel_random = 1.0
damping = 5.0
damping_random = 1.0
scale = 0.25
scale_random = 0.2
scale_curve = SubResource( 11 )

[sub_resource type="Gradient" id=7]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.193548, 0.664516, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.870117, 0, 1, 1, 0.447117, 0, 1, 1, 0.305882, 0, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 160.0
initial_velocity_random = 0.75
angular_velocity = 720.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 1 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -75.0
linear_accel_random = 0.2
damping = 5.0
damping_random = 1.0
scale = 5.0
scale_random = 1.0
scale_curve = SubResource( 3 )
color_ramp = SubResource( 8 )

[sub_resource type="CircleShape2D" id=10]
radius = 70.0

[node name="Explode" type="Node2D"]
script = ExtResource( 2 )

[node name="Timer_a" type="Timer" parent="."]
wait_time = 2.1
one_shot = true
autostart = true

[node name="Timer_b" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[node name="Bubbles" type="Particles2D" parent="."]
light_mask = 524291
emitting = false
amount = 22
lifetime = 2.0
one_shot = true
speed_scale = 1.25
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="Explode" type="Particles2D" parent="."]
light_mask = 524291
emitting = false
amount = 175
lifetime = 1.7
one_shot = true
speed_scale = 1.25
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
process_material = SubResource( 4 )

[node name="Explode_Holder" type="KinematicBody2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="Explode_Shape" type="CollisionShape2D" parent="Explode_Holder"]
shape = ExtResource( 5 )

[node name="Explode_Holder2" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Explode_Shape2" type="CollisionShape2D" parent="Explode_Holder2"]
shape = SubResource( 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 8.5, 8.5 )

[node name="Flash_1" type="Light2D" parent="."]
light_mask = 3
texture = ExtResource( 3 )
texture_scale = 1.5
energy = 1.5

[node name="Flash_2" type="Light2D" parent="."]
light_mask = 3
texture = ExtResource( 4 )
texture_scale = 0.75
energy = 0.75

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true
area_mask = 0

[connection signal="timeout" from="Timer_a" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_b" to="." method="_on_Timer_b_timeout"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
